--- a/TestHero/ClientApp/public/index.html
+++ b/TestHero/ClientApp/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
     <base href="%PUBLIC_URL%/" />
     <!--
@@ -38,4 +38,16 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
+</html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  
+  
+  <title>Document</title>
+</head>
+<body>
+  
+</body>
 </html>
